care/force-app/main/default/objects/GDPR_Settings__mdt/GDPR_Settings__mdt.object-meta.xml
<CustomObject>
    <label>GDPR Settings</label>
    <pluralLabel>GDPR Settings</pluralLabel>
</CustomObject>