care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Data_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Data_Batch_Size__c</fullName>
    <description>This specifies the batch size of RTBF/Retention Data</description>
    <inlineHelpText>Enter RTBF/Retention Data Batch Size</inlineHelpText>
    <label>Data Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>