care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Disable_CopyPersonAccountToContactOnCase__c.field-meta.xml
<CustomField>
    <fullName>Disable_CopyPersonAccountToContactOnCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable CopyPersonAccountToContactOnCase</description>
    <label>Disable CopyPersonAccountToContactOnCase</label>
    <type>Checkbox</type>
</CustomField>