care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Disable_SeniorCareCaseCountTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_SeniorCareCaseCountTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable SeniorCareCaseCountTrigger</description>
    <label>Disable SeniorCareCaseCountTrigger</label>
    <type>Checkbox</type>
</CustomField>