care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Disable_SyncLocaleToLanguageInCase__c.field-meta.xml
<CustomField>
    <fullName>Disable_SyncLocaleToLanguageInCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable SyncLocaleToLanguageInCase</description>
    <label>Disable SyncLocaleToLanguageInCase</label>
    <type>Checkbox</type>
</CustomField>