care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Fail_Over_Retrial_Limit__c.field-meta.xml
<CustomField>
    <fullName>Fail_Over_Retrial_Limit__c</fullName>
    <description>This defines the maximum limit of retrial in case of sterling account service failure</description>
    <inlineHelpText>This defines the maximum limit of retrial in case of sterling account service failure</inlineHelpText>
    <label>Fail Over Retrial Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>