care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Feed_Data_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Feed_Data_Batch_Size__c</fullName>
    <description>This specifies the batch size of RTBF/Retention Feed Data</description>
    <inlineHelpText>Enter RTBF/Retention Feed Data Batch Size</inlineHelpText>
    <label>Feed Data Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>