care/force-app/main/default/objects/GDPR_Settings__mdt/fields/History_Data_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>History_Data_Batch_Size__c</fullName>
    <description>This specifies the batch size of RTBF/Retention History Data</description>
    <inlineHelpText>Enter RTBF/Retention History Data Batch Size</inlineHelpText>
    <label>History Data Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>