care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Override_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Override_Account_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag, upon checking this, Skips Account Record Type validation while anonymyzing account.</description>
    <inlineHelpText>Check to override Account Record Type validation.</inlineHelpText>
    <label>Override Account Record Type</label>
    <type>Checkbox</type>
</CustomField>