care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Override_Employer_Program__c.field-meta.xml
<CustomField>
    <fullName>Override_Employer_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag, upon checking this, Skips Employer Program validation while anonymizing account.</description>
    <inlineHelpText>Check to override Employer Program validation.</inlineHelpText>
    <label>Override Employer Program</label>
    <type>Checkbox</type>
</CustomField>