care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Override_Premium__c.field-meta.xml
<CustomField>
    <fullName>Override_Premium__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag, upon checking this, Skips Premium validation while anonymyzing account.</description>
    <inlineHelpText>Check to override premium validation.</inlineHelpText>
    <label>Override Premium</label>
    <type>Checkbox</type>
</CustomField>