care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Override_Safety_Case__c.field-meta.xml
<CustomField>
    <fullName>Override_Safety_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag, upon checking this, Skips Safety Case validation while anonymyzing account.</description>
    <inlineHelpText>Check to override Safety Case validation.</inlineHelpText>
    <label>Override Safety Case</label>
    <type>Checkbox</type>
</CustomField>