care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Process_RTBF_Retention_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_RTBF_Retention_Request_Type__c</fullName>
    <description>Choose request type as either RTBF/Retention in Request Data.</description>
    <inlineHelpText>Choose request type as either RTBF/Retention in Request Data.</inlineHelpText>
    <label>Process RTBF/Retention Request Type?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTBF</fullName>
                <default>true</default>
                <label>RTBF</label>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>