care/force-app/main/default/objects/GDPR_Settings__mdt/fields/RTBF_Retention__c.field-meta.xml
<CustomField>
    <fullName>RTBF_Retention__c</fullName>
    <description>Provide option to choose the process type is RTBF or Retention</description>
    <inlineHelpText>Choose RTBF or Retention process and provide the corresponding validation on/off checks  like Safety Case/Premium/Employer Program/Record Type.</inlineHelpText>
    <label>RTBF/Retention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTBF</fullName>
                <default>true</default>
                <label>RTBF</label>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>