care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Schedule_Mode__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when GDPR in Schedule run mode</description>
    <inlineHelpText>Check to GDPR in Schedule Mode</inlineHelpText>
    <label>Schedule Mode</label>
    <type>Checkbox</type>
</CustomField>