care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Scope_Size__c.field-meta.xml
<CustomField>
    <fullName>Scope_Size__c</fullName>
    <description>It defines the batch size of fail over rtbf job</description>
    <inlineHelpText>It defines the batch size of fail over rtbf job</inlineHelpText>
    <label>Scope Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>