care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Status_To_Process__c.field-meta.xml
<CustomField>
    <fullName>Status_To_Process__c</fullName>
    <description>Mention GDPR Status to process. Ex:- Use &apos;Test&apos; for testing phase</description>
    <inlineHelpText>Mention GDPR Status to process. Ex:- Use &apos;Test&apos; for testing phase</inlineHelpText>
    <label>Status To Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>