care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Stop_Fail_Over_Notification_To_Sterling__c.field-meta.xml
<CustomField>
    <fullName>Stop_Fail_Over_Notification_To_Sterling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to stop fail over records to notify sterling after RTBF processing.</description>
    <inlineHelpText>Check this to stop fail over records to notify sterling after RTBF processing.</inlineHelpText>
    <label>Process FailOver Notification To Sterlng</label>
    <type>Checkbox</type>
</CustomField>