care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Stop_Sending_Notification_To_Sterling__c.field-meta.xml
<CustomField>
    <fullName>Stop_Sending_Notification_To_Sterling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to stop sending notification to sterling after salesforce rtbf processing</description>
    <inlineHelpText>Check this to stop sending notification to sterling after salesforce rtbf processing</inlineHelpText>
    <label>Process Sending Notification To Sterling</label>
    <type>Checkbox</type>
</CustomField>