care/force-app/main/default/objects/GDPR_Settings__mdt/fields/Time_To_Schedule_SSMMHH__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Schedule_SSMMHH__c</fullName>
    <description>Enter GDPR schedule time in SSMMHH format</description>
    <inlineHelpText>Enter GDPR schedule time in SSMMHH format</inlineHelpText>
    <label>Time To Schedule(SSMMHH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>